# m7_master

./: CMakeLists.txt  README.md  package.xml
NNModel/: test.cpp
calib/: 15374749.yaml
include/m7_master/: ArmController.h  MasterConfig.h  MasterTypes.h  PID.h  Physics.h  Polynomial.hpp  roombaCallback.hpp  runNN.hpp
include/mission7_master/: M7Master.cpp  M7Master.h  Params.cpp  Params.h  Types.h
launch/: Full_Simulation.launch  TrajectorySim.launch  arm.launch  euroc_viso_stereo.launch  mavros_sitl_noir.launch  posix_sitl_noir.launch  px4.launch  px4_pluginlists.yaml  rig1_data.launch
launch/simulation/: TrajectorySim.launch  ground_robots.launch  mavros_sitl_noir.launch  mission_7_simulation.launch  posix_sitl_noir.launch
mesh/: m7v3-leg.stl
params/: README.md
params/NNModel/: Model
robot_description/: README.md  generateURDF.sh  legacy.urdf  noir.sdf  noir_base.urdf
robot_description/noir_description/urdf/: component_snippets.xacro  flying_stereo_cam.gazebo  multirotor_base.xacro  noir.xacro  noir_base.xacro
simulation/ekf2/: noir_posix_config
simulation/lpe/: noir_posix_config
src/: arm_sim.cpp  arm_test.cpp  m7_master.cpp  master_node.cpp
urdf/: generateURDF.sh  m7_robot.urdf  noir.sdf  noir_base.urdf
urdf/noir_description/: model.config
urdf/noir_description/urdf/: multirotor_base.xacro  noir.xacro  noir_base.xacro
urdf/posix-configs/SITL/init/ekf2/: noir
